--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/site.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
 	</head>
 	<body class="is-preload">
 		<!-- Wrapper -->
@@ -20,7 +21,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Andreas Lichtsinn</h1>
-						<p>I'm a full-stack developer with focus on C#/.NET, Xamarin, ASP.NET and Azure.</p>
+						 <p><div id="typewrite"></div></p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -113,6 +114,19 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+			<script type="text/javascript">
+				var app = document.getElementById('typewrite');
+					var typewriter = new Typewriter(app, {
+					loop: false,
+					delay: 50,
+					});
+
+					typewriter
+					.pauseFor(1500)
+					.typeString("I'm a full-stack developer with focus on C#/.NET, Xamarin, ASP.NET and Azure.")
+					.start()
+			</script>
 
 	</body>
 </html>
