--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
 					typewriter
 					.pauseFor(1500)
-					.typeString("I'm a full-stack developer with focus on C#/.NET, Xamarin, ASP.NET and Azure.")
+					.typeString("<i>I'm a full-stack developer with focus on C#/.NET, Xamarin, ASP.NET and Azure.</i>")
 					.start()
 			</script>
 
