--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
 							<article class="post featured">
 								<header class="major">
 									<h2><a href="#">Großstadt dinner</a></h2>
-									<p><img class="techstack" src="images/jquery.svg">
-										<img class="techstack" src="images/bootstrap.svg">
+									<div class="techstackcontainer">	
+										<img class="techstack" src="images/jquery.svg">
+										<img class="techstack" src="images/bootstrap.png">
 										<img class="techstack" src="images/aspnetcore.png">
 										<img class="techstack" src="images/azure.svg">
 										<img class="techstack" src="images/sqlazure.png">
-									</p>
+									</div>
 									<p>Grossstadt Dinner is a website that organizes Running Dinners in Frankfurt. It is running since 2018 and had 60 participants so far.</p>
 								</header>
 								<a href="https://www.grossstadtdinner.de" class="image main"><img src="images/grossstadtdinner.png" alt="" /></a>
@@ -60,24 +61,37 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Sed magna<br />
-										ipsum faucibus</a></h2>
+										<a href="#" class="image fit"><img src="images/findmeadrink.png" alt="" /></a>
+										<div class="techstackcontainer">
+											<img class="techstack" src="images/typescript2.svg">
+											<img class="techstack" src="images/react.svg">
+											<img class="techstack" src="images/azure.svg">
+											<img class="techstack" src="images/here.svg">
+										</div>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p><b>Find me a drink</b> is a website that shows you where you can find the next bar in your area.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Check it out</a></li>
+									</ul>
+									<ul class="actions special">
+										<li><a href="https://github.com/AndreasLichtsinn" class="button icon brands fa-github">See code</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<a href="#" class="image fit"><img src="images/whereismyorder.png" alt="" /></a>
+										<div class="techstackcontainer">
+											<img class="techstack" src="images/xamarin.png">
+											<img class="techstack" src="images/android2.svg">
+											<img class="techstack" src="images/ios.svg">
+										</div>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p><b>Where is my order</b> is an app that helps you keep track over your orders.</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">Check it out</a></li>
+									</ul>
+									<ul class="actions special">
+										<li><a href="https://github.com/AndreasLichtsinn" class="button icon brands fa-github">See code</a></li>
 									</ul>
 								</article>
 								
