--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- Featured Post -->
+						<!-- Großstadtdinner -->
 							<article class="post featured">
 								<header class="major">
 									<h2><a href="#">Großstadt dinner</a></h2>
@@ -57,16 +57,16 @@
 								</ul>
 							</article>
 
-						<!-- Posts -->
+						
 							<section class="posts">
+								<!-- Find me a drink -->
 								<article>
 									<header>
 										<a href="#" class="image fit"><img src="images/findmeadrink.png" alt="" /></a>
 										<div class="techstackcontainer">
-											<img class="techstack" src="images/typescript2.svg">
-											<img class="techstack" src="images/react.svg">
-											<img class="techstack" src="images/azure.svg">
-											<img class="techstack" src="images/here.svg">
+											<img class="techstack" src="images/xamarin.png">
+											<img class="techstack" src="images/android2.svg">
+											<img class="techstack" src="images/googlemaps.jpg">
 										</div>
 									</header>
 									<p><b>Find me a drink</b> is a website that shows you where you can find the next bar in your area.</p>
@@ -77,13 +77,14 @@
 										<li><a href="https://github.com/AndreasLichtsinn" class="button icon brands fa-github">See code</a></li>
 									</ul>
 								</article>
+								<!-- Where is my order? -->
 								<article>
 									<header>
 										<a href="#" class="image fit"><img src="images/whereismyorder.png" alt="" /></a>
 										<div class="techstackcontainer">
-											<img class="techstack" src="images/xamarin.png">
-											<img class="techstack" src="images/android2.svg">
-											<img class="techstack" src="images/ios.svg">
+											<img class="techstack" src="images/typescript2.svg">
+											<img class="techstack" src="images/react.svg">
+											<img class="techstack" src="images/azure.svg">
 										</div>
 									</header>
 									<p><b>Where is my order</b> is an app that helps you keep track over your orders.</p>
@@ -93,8 +94,46 @@
 									<ul class="actions special">
 										<li><a href="https://github.com/AndreasLichtsinn" class="button icon brands fa-github">See code</a></li>
 									</ul>
+								</article>								
+							</section>
+
+							<section class="posts">
+								<!-- Find me a drink -->
+								<article>
+									<header>
+										<a href="#" class="image fit"><img src="images/findmeadrink.png" alt="" /></a>
+										<div class="techstackcontainer">
+											<img class="techstack" src="images/xamarin.png">
+											<img class="techstack" src="images/android2.svg">
+											<img class="techstack" src="images/googlemaps.jpg">
+										</div>
+									</header>
+									<p><b>Find me a drink</b> is a website that shows you where you can find the next bar in your area.</p>
+									<ul class="actions special">
+										<li><a href="#" class="button">Check it out</a></li>
+									</ul>
+									<ul class="actions special">
+										<li><a href="https://github.com/AndreasLichtsinn" class="button icon brands fa-github">See code</a></li>
+									</ul>
 								</article>
-								
+								<!-- Where is my order? -->
+								<article>
+									<header>
+										<a href="#" class="image fit"><img src="images/whereismyorder.png" alt="" /></a>
+										<div class="techstackcontainer">
+											<img class="techstack" src="images/typescript2.svg">
+											<img class="techstack" src="images/react.svg">
+											<img class="techstack" src="images/azure.svg">
+										</div>
+									</header>
+									<p><b>Where is my order</b> is an app that helps you keep track over your orders.</p>
+									<ul class="actions special">
+										<li><a href="#" class="button">Check it out</a></li>
+									</ul>
+									<ul class="actions special">
+										<li><a href="https://github.com/AndreasLichtsinn" class="button icon brands fa-github">See code</a></li>
+									</ul>
+								</article>								
 							</section>
 
 					</div>
