--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 								<!-- Find me a drink -->
 								<article>
 									<header>
-										<a href="#" class="image fit"><img src="images/findmeadrink.png" alt="" /></a>
+										<a href="#" class="image"><img src="images/findmeadrink.png" alt="" /></a>
 										<div class="techstackcontainer">
 											<img class="techstack" src="images/xamarin.png">
 											<img class="techstack" src="images/android2.svg">
@@ -80,7 +80,7 @@
 								<!-- Where is my order? -->
 								<article>
 									<header>
-										<a href="#" class="image fit"><img src="images/whereismyorder.png" alt="" /></a>
+										<a href="#" class="image"><img src="images/whereismyorder.png" alt="" /></a>
 										<div class="techstackcontainer">
 											<img class="techstack" src="images/typescript2.svg">
 											<img class="techstack" src="images/react.svg">
@@ -101,7 +101,7 @@
 								<!-- Find me a drink -->
 								<article>
 									<header>
-										<a href="#" class="image fit"><img src="images/findmeadrink.png" alt="" /></a>
+										<a href="#" class="image"><img src="images/findmeadrink.png" alt="" /></a>
 										<div class="techstackcontainer">
 											<img class="techstack" src="images/xamarin.png">
 											<img class="techstack" src="images/android2.svg">
@@ -119,7 +119,7 @@
 								<!-- Where is my order? -->
 								<article>
 									<header>
-										<a href="#" class="image fit"><img src="images/whereismyorder.png" alt="" /></a>
+										<a href="#" class="image"><img src="images/whereismyorder.png" alt="" /></a>
 										<div class="techstackcontainer">
 											<img class="techstack" src="images/typescript2.svg">
 											<img class="techstack" src="images/react.svg">
