--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 					<div id="intro">
 						<h1>Andreas Lichtsinn</h1>
 						 <p><div id="typewrite"></div></p>
+						 <a href="" class="button" style="margin-bottom: 20px;">About Me</a>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
