--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
 		integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
 		crossorigin="anonymous"></script>
-	<noscript>
-		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 
 </head>
 
@@ -62,6 +61,8 @@
 						<img class="techstack" src="images/aspnetcore.png">
 						<img class="techstack" src="images/azure.svg">
 						<img class="techstack" src="images/sqlazure.png">
+						<img class="techstack" src="images/here.svg">
+						<img class="techstack" src="images/mailjet.png">
 					</div>
 					<p>Grossstadt Dinner is a website that organizes Running Dinners in Frankfurt. It is running since
 						2018 and had 60 participants so far.</p>
@@ -119,7 +120,7 @@
 							<img class="techstack" src="images/googlemaps.jpg">
 						</div>
 					</header>
-					<p><b>Find me a drink</b> is a website that shows you where you can find the next bar in your area.
+					<p><b>Find me a drink</b> is a mobile app that shows you the next bar in your area.
 					</p>
 					<ul class="actions special">
 						<li><a href="#" class="button">Check it out</a></li>
@@ -238,7 +239,7 @@
 
 		typewriter
 			.pauseFor(1500)
-			.typeString("<i>I'm a full-stack developer with focus on C#/.NET, Xamarin, ASP.NET and Azure.</i>")
+			.typeString("<i>I'm a full-stack developer with focus on C#/.NET, JavaScript/TypeScript and Azure.</i>")
 			.start()
 	</script>
 
