--- a/index.html
+++ b/index.html
@@ -138,53 +138,12 @@
 							<img class="techstack" src="images/typescript2.svg">
 							<img class="techstack" src="images/react.svg">
 							<img class="techstack" src="images/azure.svg">
+							<img class="techstack" src="images/Auth0.png">
 						</div>
 					</header>
 					<p><b>Where is my order</b> is an app that helps you keep track over your orders.</p>
 					<ul class="actions special">
-						<li><a href="#" class="button">Check it out</a></li>
-					</ul>
-					<ul class="actions special">
-						<li><a href="https://github.com/AndreasLichtsinn" class="button icon brands fa-github">See
-								code</a></li>
-					</ul>
-				</article>
-			</section>
-
-			<section class="posts">
-				<!-- Find me a drink -->
-				<!-- Where is my order? -->
-				<article>
-					<header>
-						<a href="#" class="image"><img src="images/whereismyorder.png" alt="" /></a>
-						<div class="techstackcontainer">
-							<img class="techstack" src="images/typescript2.svg">
-							<img class="techstack" src="images/angular2.svg">
-							<img class="techstack" src="images/azure.svg">
-						</div>
-					</header>
-					<p><b>Where is my order</b> is an app that helps you keep track over your orders.</p>
-					<ul class="actions special">
-						<li><a href="#" class="button">Check it out</a></li>
-					</ul>
-					<ul class="actions special">
-						<li><a href="https://github.com/AndreasLichtsinn" class="button icon brands fa-github">See
-								code</a></li>
-					</ul>
-				</article>
-				<!-- Where is my order? -->
-				<article>
-					<header>
-						<a href="#" class="image"><img src="images/whereismyorder.png" alt="" /></a>
-						<div class="techstackcontainer">
-							<img class="techstack" src="images/typescript2.svg">
-							<img class="techstack" src="images/vue.svg">
-							<img class="techstack" src="images/azure.svg">
-						</div>
-					</header>
-					<p><b>Where is my order</b> is an app that helps you keep track over your orders.</p>
-					<ul class="actions special">
-						<li><a href="#" class="button">Check it out</a></li>
+						<li><a href="https://whereismyorder.azurewebsites.net" class="button">Check it out</a></li>
 					</ul>
 					<ul class="actions special">
 						<li><a href="https://github.com/AndreasLichtsinn" class="button icon brands fa-github">See
