--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<p>
 			<div id="typewrite"></div>
 			</p>
-			<a href="" class="button" style="margin-bottom: 20px;">About Me</a>
+			<a href="" class="button" style="margin-bottom: 20px;">Download CV</a>
 			<ul class="actions">
 				<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 			</ul>
@@ -62,6 +62,7 @@
 						<img class="techstack" src="images/aspnetcore.png">
 						<img class="techstack" src="images/azure.svg">
 						<img class="techstack" src="images/sqlazure.png">
+						<img class="techstack" src="images/efcore.png">
 						<img class="techstack" src="images/here.svg">
 						<img class="techstack" src="images/mailjet.png">
 					</div>
@@ -137,12 +138,12 @@
 						<a href="#" class="image"><img src="images/whereismyorder.png" alt="" /></a>
 						<div class="techstackcontainer">
 							<img class="techstack" src="images/typescript2.svg">
-							<img class="techstack" src="images/react.svg">
+							<img class="techstack" src="images/react.png">
 							<img class="techstack" src="images/azure.svg">
 							<img class="techstack" src="images/Auth0.png">
 						</div>
 					</header>
-					<p><b>Where is my order</b> is an app that helps you keep track over your orders.</p>
+					<p><b>Where is my order</b> is a website that helps you keep track over your orders.</p>
 					<ul class="actions special">
 						<li><a href="https://whereismyorder.azurewebsites.net" class="button">Check it out</a></li>
 					</ul>
