--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 			<p>
 			<div id="typewrite"></div>
 			</p>
-			<a href="" class="button" style="margin-bottom: 20px;">Download CV</a>
+			<a href="Lebenslauf.pdf" class="button" style="margin-bottom: 20px;">Download CV</a>
 			<ul class="actions">
-				<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+				<li><a href="" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 			</ul>
 		</div>
 
@@ -55,7 +55,7 @@
 			<!-- Großstadtdinner -->
 			<article class="post featured">
 				<header class="major">
-					<h2><a href="#">Großstadt dinner</a></h2>
+					<h2><a >Großstadt dinner</a></h2>
 					<div class="techstackcontainer">
 						<img class="techstack" src="images/jquery.svg">
 						<img class="techstack" src="images/bootstrap.png">
@@ -67,9 +67,8 @@
 						<img class="techstack" src="images/mailjet.png">
 					</div>
 					<p>Grossstadt Dinner is a website that organizes Running Dinners in Frankfurt. It is running since
-						2018 and had 60 participants so far.</p>
+						2018 and had 60 participants so far. Routes are calculated by an algorithm based on location.</p>
 				</header>
-				<!-- <a href="https://www.grossstadtdinner.de" class="image main"><img src="images/grossstadtdinner.png" alt="" /></a> -->
 				<div id="demo" class="carousel slide" data-ride="carousel">
 
 					<!-- Indicators -->
@@ -115,19 +114,18 @@
 				<!-- Find me a drink -->
 				<article>
 					<header>
-						<a href="#" class="image"><img src="images/findmeadrink.png" alt="" /></a>
+						<a class="image"><img src="images/findmeadrink.png" alt="" /></a>
 						<div class="techstackcontainer">
 							<img class="techstack" src="images/xamarin.png">
 							<img class="techstack" src="images/android2.svg">
 							<img class="techstack" src="images/googlemaps.jpg">
+							<img class="techstack" src="images/AppCenter.png">
 						</div>
 					</header>
 					<p><b>Find me a drink</b> is a mobile app that shows you the next bar in your area.
 					</p>
-					<ul class="actions special">
-						<li><a href="#" class="button">Check it out</a></li>
-					</ul>
-					<ul class="actions special">
+					<img src="images/findmeadrink.gif" style="width:80%">
+					<ul class="actions special" style="margin-top:20px">
 						<li><a href="https://github.com/AndreasLichtsinn" class="button icon brands fa-github">See
 								code</a></li>
 					</ul>
@@ -135,25 +133,22 @@
 				<!-- Where is my order? -->
 				<article>
 					<header>
-						<a href="#" class="image"><img src="images/whereismyorder.png" alt="" /></a>
+						<a class="image"><img src="images/whereismyorder.png" alt="" /></a>
 						<div class="techstackcontainer">
-							<img class="techstack" src="images/typescript2.svg">
 							<img class="techstack" src="images/react.png">
+							<img class="techstack" src="images/typescript2.svg">
+							<img class="techstack" src="images/bootstrap.png">
 							<img class="techstack" src="images/azure.svg">
 							<img class="techstack" src="images/Auth0.png">
 						</div>
 					</header>
 					<p><b>Where is my order</b> is a website that helps you keep track over your orders.</p>
-					<ul class="actions special">
-						<li><a href="https://whereismyorder.azurewebsites.net" class="button">Check it out</a></li>
-					</ul>
-					<ul class="actions special">
-						<li><a href="https://github.com/AndreasLichtsinn" class="button icon brands fa-github">See
-								code</a></li>
+					<img src="images/whereismyorder.gif" style="width:90%">
+					<ul class="actions special" style="margin-top:20px">
+						<li><a class="button icon"><i class="fas fa-wrench"></i> Under construction</a></li>
 					</ul>
 				</article>
 			</section>
-
 		</div>
 
 		<!-- Footer -->
@@ -200,7 +195,7 @@
 
 		typewriter
 			.pauseFor(1500)
-			.typeString("<i>I'm a full-stack developer with focus on C#/.NET, JavaScript/TypeScript and Azure.</i>")
+			.typeString("<i>I'm a full-stack and mobile developer with focus on .NET.</i>")
 			.start()
 	</script>
 
