Added github links

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 					<li><a href="https://www.grossstadtdinner.de" class="button large">Check it out</a></li>
 				</ul>
 				<ul class="actions special">
-					<li><a href="https://github.com/AndreasLichtsinn" class="button large icon brands fa-github">See
+					<li><a href="https://github.com/AndreasLichtsinn/RunningDinner_V2" class="button large icon brands fa-github">See
 							code</a></li>
 				</ul>
 			</article>
@@ -126,7 +126,7 @@
 					</p>
 					<img src="images/findmeadrink.gif" style="width:80%">
 					<ul class="actions special" style="margin-top:20px">
-						<li><a href="https://github.com/AndreasLichtsinn" class="button icon brands fa-github">See
+						<li><a href="https://github.com/AndreasLichtsinn/findmeadrink2/" class="button icon brands fa-github">See
 								code</a></li>
 					</ul>
 				</article>
