--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			</p>
 			<a href="Lebenslauf.pdf" class="button" style="margin-bottom: 20px;">Download CV</a>
 			<ul class="actions">
-				<li><a href="" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+				<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 			</ul>
 		</div>
 
@@ -114,7 +114,7 @@
 				<!-- Find me a drink -->
 				<article>
 					<header>
-						<a class="image"><img src="images/findmeadrink.png" alt="" /></a>
+						<h2><a >FIND ME A DRINK</a></h2>
 						<div class="techstackcontainer">
 							<img class="techstack" src="images/xamarin.png">
 							<img class="techstack" src="images/android2.svg">
@@ -133,7 +133,7 @@
 				<!-- Where is my order? -->
 				<article>
 					<header>
-						<a class="image"><img src="images/whereismyorder.png" alt="" /></a>
+						<h2><a >WHERE IS MY ORDER?</a></h2>
 						<div class="techstackcontainer">
 							<img class="techstack" src="images/react.png">
 							<img class="techstack" src="images/typescript2.svg">
