--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 								class="icon brands fa-xing"><span class="label">Xing</span></a></li>
 						<li><a href="https://www.linkedin.com/in/andreas-lichtsinn"
 								class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-						<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="https://github.com/AndreasLichtsinn/" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 					</ul>
 				</section>
 			</section>
