--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<p>
 			<div id="typewrite"></div>
 			</p>
-			<a href="Lebenslauf.pdf" class="button" style="margin-bottom: 20px;">Download CV</a>
+			<a href="Lebenslauf Andreas Lichtsinn.pdf" class="button" style="margin-bottom: 20px;">Download CV</a>
 			<ul class="actions">
 				<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 			</ul>
