--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
 				</div>
 				<ul class="actions special">
-					<li><a href="https://www.grossstadtdinner.de" class="button large">Check it out</a></li>
+					<li><a href="https://grossstadtdinner.azurewebsites.net" class="button large">Check it out</a></li>
 				</ul>
 				<ul class="actions special">
 					<li><a href="https://github.com/AndreasLichtsinn/RunningDinner_V2" class="button large icon brands fa-github">See
