--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 						<div class="techstackcontainer">
 							<img class="techstack" src="images/xamarin.png">
 							<img class="techstack" src="images/android2.svg">
-							<img class="techstack" src="images/ios.svg">
+							<img class="techstack" src="images/apple.svg">
 							<img class="techstack" src="images/googlemaps.jpg">
 							<img class="techstack" src="images/AppCenter.png">
 						</div>
