--- a/index.html
+++ b/index.html
@@ -125,7 +125,6 @@
 					</header>
 					<p><b>Find me a drink</b> is a mobile app that shows you the next bar in your area.
 					</p>
-					<!-- <img src="images/findmeadrink_android.gif" style="width:70%"> -->
 					<div id="findmeadrink" class="carousel slide" data-ride="carousel" data-interval="10000">
 
 						<!-- Indicators -->
@@ -167,14 +166,49 @@
 							<img class="techstack" src="images/react.png">
 							<img class="techstack" src="images/typescript2.svg">
 							<img class="techstack" src="images/bootstrap.png">
+							<img class="techstack" src="images/aspnetcore.png">
 							<img class="techstack" src="images/azure.svg">
 							<img class="techstack" src="images/Auth0.png">
 						</div>
 					</header>
 					<p><b>Where is my order</b> is a website that helps you keep track over your orders.</p>
-					<img src="images/whereismyorder.gif" style="width:90%">
+					<div id="whereismyorder" class="carousel slide" data-ride="carousel">
+
+						<!-- Indicators -->
+						<ul class="carousel-indicators">
+							<li data-target="#whereismyorder" data-slide-to="0" class="active"></li>
+							<li data-target="#whereismyorder" data-slide-to="1"></li>
+						</ul>
+	
+						<!-- The slideshow -->
+						<div class="carousel-inner">
+							<div class="carousel-item">
+								<img class="image main" src="images/whereismyorder2.png" alt="overview" style="margin-left: auto; margin-right: auto">
+							</div>
+							<div class="carousel-item active">
+								<img class="image main" src="images/whereismyorder3.png" alt="login" style="margin-left: auto; margin-right: auto">
+							</div>
+							<div class="carousel-item">
+								<img class="image main" src="images/whereismyorder1.png" alt="newOrder" style="margin-left: auto; margin-right: auto">
+							</div>
+						</div>
+	
+						<!-- Left and right controls -->
+						<a class="carousel-control-prev" href="#whereismyorder" data-slide="prev">
+							<span class="carousel-control-prev-icon"></span>
+						</a>
+						<a class="carousel-control-next" href="#whereismyorder" data-slide="next">
+							<span class="carousel-control-next-icon"></span>
+						</a>
+	
+					</div>
+
 					<ul class="actions special" style="margin-top:20px">
-						<li><a class="button icon"><i class="fas fa-wrench"></i> Under construction</a></li>
+						<li><a href="https://whereismyorder2.azurewebsites.net" class="button icon">Check it out</a></li>
+					</ul>
+					<ul class="actions special">
+						<li><a href="https://github.com/AndreasLichtsinn/whereismyorder2" class="button icon brands fa-github">See
+								code</a></li>
 					</ul>
 				</article>
 			</section>
