--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 					</div>
 
 					<ul class="actions special" style="margin-top:20px">
-						<li><a href="https://whereismyorder2.azurewebsites.net" class="button icon">Check it out</a></li>
+						<li><a href="https://whereismyorder.azurewebsites.net" class="button icon">Check it out</a></li>
 					</ul>
 					<ul class="actions special">
 						<li><a href="https://github.com/AndreasLichtsinn/whereismyorder2" class="button icon brands fa-github">See
