--- a/index.html
+++ b/index.html
@@ -172,36 +172,7 @@
 						</div>
 					</header>
 					<p><b>Where is my order</b> is a website that helps you keep track over your orders.</p>
-					<div id="whereismyorder" class="carousel slide" data-ride="carousel">
-
-						<!-- Indicators -->
-						<ul class="carousel-indicators">
-							<li data-target="#whereismyorder" data-slide-to="0" class="active"></li>
-							<li data-target="#whereismyorder" data-slide-to="1"></li>
-						</ul>
-	
-						<!-- The slideshow -->
-						<div class="carousel-inner">
-							<div class="carousel-item">
-								<img class="image main" src="images/whereismyorder2.png" alt="overview" style="margin-left: auto; margin-right: auto">
-							</div>
-							<div class="carousel-item active">
-								<img class="image main" src="images/whereismyorder3.png" alt="login" style="margin-left: auto; margin-right: auto">
-							</div>
-							<div class="carousel-item">
-								<img class="image main" src="images/whereismyorder1.png" alt="newOrder" style="margin-left: auto; margin-right: auto">
-							</div>
-						</div>
-	
-						<!-- Left and right controls -->
-						<a class="carousel-control-prev" href="#whereismyorder" data-slide="prev">
-							<span class="carousel-control-prev-icon"></span>
-						</a>
-						<a class="carousel-control-next" href="#whereismyorder" data-slide="next">
-							<span class="carousel-control-next-icon"></span>
-						</a>
-	
-					</div>
+					<img class="image main" src="images/whereismyorder.gif" alt="newOrder" style="margin-left: auto; margin-right: auto">
 
 					<ul class="actions special" style="margin-top:20px">
 						<li><a href="https://whereismyorder.azurewebsites.net" class="button icon">Check it out</a></li>
