--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 					<img class="image main" src="images/whereismyorder.gif" alt="newOrder" style="margin-left: auto; margin-right: auto">
 
 					<ul class="actions special" style="margin-top:20px">
-						<li><a href="https://whereismyorder.azurewebsites.net" class="button icon">Check it out</a></li>
+						<li><a href="https://thankful-grass-0b0f7f603.azurestaticapps.net" class="button icon">Check it out</a></li>
 					</ul>
 					<ul class="actions special">
 						<li><a href="https://github.com/AndreasLichtsinn/WhereIsMyOrderUI" class="button icon brands fa-github">See
