--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 						</div>
 					</header>
 					<p><b>Where is my order</b> is a website that helps you keep track over your orders.</p>
-					<img class="image main" src="images/whereismyorder.gif" alt="newOrder" style="margin-left: auto; margin-right: auto">
+					<img class="image main" src="images/whereismyorder_app.png" alt="newOrder" style="margin-left: auto; margin-right: auto">
 
 					<ul class="actions special" style="margin-top:20px">
 						<li><a href="https://thankful-grass-0b0f7f603.azurestaticapps.net" class="button icon">Check it out</a></li>
