--- a/index.html
+++ b/index.html
@@ -166,7 +166,8 @@
 							<img class="techstack" src="images/react.png">
 							<img class="techstack" src="images/typescript2.svg">
 							<img class="techstack" src="images/bootstrap.png">
-							<img class="techstack" src="images/azurefunctions.gif">
+							<img class="techstack" src="images/primereact.png">
+							<img class="techstack" src="images/azurefunctions.png">
 							<img class="techstack" src="images/azure.svg">
 							<img class="techstack" src="images/Auth0.png">
 						</div>
